--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
             console.log(full_name)
             var a=10
             var b=5
-            var add=a+b
+            var add=a + b
             console.log(add)
+            var sub=a - b
+            console.log(sub)
+            var mul=a * b
+            console.log(mul)
+            var div=a/b
+            console.log(div)
         </script>
     </body>
 </html>
